<resources>
    <string name="app_name">SwooshApp</string>
    <string name="background_image">Background Image</string>
    <string name="logo">Swoosh Logo</string>
    <string name="desired_league">Desired League:</string>
    <string name="mens">Mens</string>
    <string name="womans">Womans</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="go_all_in">GO ALL IN</string>
    <string name="on_going_all_out">ON GOING ALL OUT</string>
    <string name="motivation_text"><![CDATA[Find a team in your city & and dominate the leauge]]></string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">I am a:</string>
    <string name="beginner">Beginner</string>
    <string name="expert">Expert</string>
    <string name="finish">FINISH</string>
    <string name="search_stage_league">locking for Co-Ed players near you...</string>
</resources>
