<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.timuc.swooshapp.LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/imageView3"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop" android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="78dp"
            android:layout_height="31dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitCenter" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/desired_league"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="@android:color/background_light"
            android:fontFamily="@font/montserrat"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="258dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="140dp" android:id="@+id/linearLayout">
        <ToggleButton
                android:text="@string/mens"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="206dp"
                tools:layout_editor_absoluteX="136dp" android:id="@+id/toggleButton" android:textOff="@string/mens"
                android:textOn="@string/mens" android:fontFamily="@font/montserrat"
                android:background="@drawable/swoosh_toggle" android:textColor="@android:color/background_light"/>
        <ToggleButton
                android:text="@string/womans"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton2"
                android:layout_marginBottom="16dp" android:layout_marginTop="16dp" android:textOff="@string/womans"
                android:textOn="@string/womans" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/background_light" android:background="@drawable/swoosh_toggle"/>
        <ToggleButton
                android:text="@string/co_ed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/toggleButton3" android:textOff="@string/co_ed"
                android:textOn="@string/co_ed" android:fontFamily="@font/montserrat"
                android:textColor="@android:color/background_light" android:background="@drawable/swoosh_toggle"/>
    </LinearLayout>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:background="@drawable/swoosh_drawable" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/background_light"/>
</android.support.constraint.ConstraintLayout>
