<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.timuc.swooshapp.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/imageView5"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:scaleType="centerCrop"
            android:contentDescription="@string/background_image"/>
    <ImageView
            android:layout_width="78dp"
            android:layout_height="31dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/imageView4" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:scaleType="fitCenter" android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" android:fontFamily="@font/montserrat"
            android:textSize="18sp" android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@id/textView5" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp">
        <ToggleButton
                android:text="@string/beginner"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/toggleButton7" android:layout_weight="1"
                android:fontFamily="@font/montserrat" android:textColor="@android:color/background_light"
                android:background="@drawable/swoosh_toggle" android:textOff="@string/beginner" android:textOn="@string/beginner"
                android:layout_marginEnd="8dp"/>
        <ToggleButton
                android:text="@string/expert"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1"
                android:background="@drawable/swoosh_toggle" android:textSize="18sp"
                android:fontFamily="@font/montserrat" tools:text="Expert" android:textOff="@string/expert"
                android:textOn="@string/expert" android:textColor="@android:color/background_light"
                android:layout_marginStart="8dp"/>
    </LinearLayout>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_drawable"/>

</android.support.constraint.ConstraintLayout>
